# TrayScrollControl_Brightness

./: .clang-format  .clangd  .gitignore  Cargo.toml  README.md  TrayScrollControl.c  TrayScrollControl.cpp  rustfmt.toml  test.cpp
src/: brightness.hpp  globals.hpp  main.cpp  main.rs  resources.rc  resources.res  tray_monitors.hpp
