[package]
name = "TrayScrollControl_Brightness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
brightness = { version = "0.8.0", features = ["async"] }
futures = "0.3.31"
windows-sys = {version = "0.61.2", features = [ "Win32_Graphics_Gdi", "Win32_System_LibraryLoader","Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_Input", "Win32_Devices", "Win32_Devices_Display", "Win32_Devices_HumanInterfaceDevice" ] }
